--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "~37.0.3",
     "expo-font": "^8.1.1",
+    "expo-google-app-auth": "^8.1.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
