add styling to sign in with google btn

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "project",
-    "slug": "project",
+    "name": "Remember Names",
+    "slug": "remember-names",
     "platforms": [
       "ios",
       "android",
@@ -23,6 +23,9 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "sdkVersion": "37.0.0",
+    "description": "An app that helps St. Olaf students remember the names of other St. Olaf students. ",
+    "githubUrl": "https://github.com/kevin-a-nelson/remember_names"
   }
 }
